--- a/responsive.css
+++ b/responsive.css
@@ -134,6 +134,55 @@
 }
 
 @media (min-width: 768px) and (max-width: 991.99px) {
+      
+    /* banner part */
+
+
+    .banner{
+  
+    height: 400px;
+    
+    }
+   .banner h1{
+    
+     font-size: 28px;
+    width: 350px;
+    padding-top: 165px !important;
+     padding-bottom: 0px;
+     
+     height: 0px;
+   
+   
+   }
+.banner a {
+	font-weight: 400;
+	font-size: 10px;
+	padding-top: 8px;
+	padding-bottom: 8px;
+	padding-left: 15px;
+	padding-right: 15px;
+	margin-top: 85px;
+}
+/* banner part */
+
+/* supplier part */
+.supplier .col-lg-5 h2 {
+	font-size: 28px;
+	width: 210px;
+	line-height: 38px;
+}
+.supplier .col-lg-7 p {
+	font-weight: 400;
+	font-size: 11px;
+	width: 450px;
+	padding-top: 32px;
+}
+.supplier {
+	padding-top: 50px;
+	padding-bottom: 30px;
+}
+/* supplier part */
+
     .row {
         row-gap: 30px;
     }
