--- a/responsive.css
+++ b/responsive.css
@@ -4,190 +4,303 @@
     /* banner part */
 
 
-    .banner{
-  
-    height: 200px;
-    
+    .banner {
+
+        height: 200px;
+
     }
-   .banner h1{
-    
-     font-size: 18px;
-     width: 236px;
-     padding-top: 73px !important;
-     padding-bottom: 0px;
-     
-     height: 0px;
-   
-   
-   }
-   .banner a{
-   
-    font-weight: 500;
-    
-     font-size: 8px;
-    
-     padding-top: 5px;
-     padding-bottom: 5px;
-     padding-left: 10px;
-     padding-right: 11px;
-     margin-top: 50px;
-   
-     
-   
 
-}
+    .banner h1 {
 
-/* banner part */
+        font-size: 18px;
+        width: 236px;
+        padding-top: 73px !important;
+        padding-bottom: 0px;
 
-/* supplier part */
-.supplier .col-lg-5 h2 {
-	
-	font-size: 14px;
-	width: 97px;
-	line-height: 22px;
-}
-.supplier .col-lg-7 p {
-
-	font-weight: 300;
-	
-	font-size: 10px;
-	width: 207px;
-	padding-top: 0px;
-}
-.supplier{
-    padding-top: 78px;
-    padding-bottom: 100px;
-}
+        height: 0px;
 
 
-/* supplier part */
+    }
 
-/* image part */
+    .banner a {
+
+        font-weight: 500;
+
+        font-size: 8px;
+
+        padding-top: 5px;
+        padding-bottom: 5px;
+        padding-left: 10px;
+        padding-right: 11px;
+        margin-top: 50px;
+
+
+
+
+    }
+
+    /* banner part */
+
+    /* supplier part */
+    .supplier .col-lg-5 h2 {
+
+        font-size: 14px;
+        width: 97px;
+        line-height: 22px;
+    }
+
+    .supplier .col-lg-7 p {
+
+        font-weight: 300;
+
+        font-size: 10px;
+        width: 207px;
+        padding-top: 0px;
+    }
+
+    .supplier {
+        padding-top: 78px;
+        padding-bottom: 100px;
+    }
+
+
+    /* supplier part */
+
+    /* image part */
     .row {
         gap: 15px;
     }
 
- /* image part */
+    /* image part */
 }
 
 @media (min-width: 576px) and (max-width: 767.99px) {
 
-    
+
     /* banner part */
 
 
-    .banner{
-  
-    height: 320px;
-    
+    .banner {
+
+        height: 320px;
+
     }
-   .banner h1{
-    
-     font-size: 24px;
-    width: 307px;
-    padding-top: 139px !important;
-     padding-bottom: 0px;
-     
-     height: 0px;
-   
-   
-   }
-.banner a {
-	font-weight: 400;
-	font-size: 10px;
-	padding-top: 8px;
-	padding-bottom: 8px;
-	padding-left: 15px;
-	padding-right: 15px;
-	margin-top: 64px;
-}
-/* banner part */
 
-/* supplier part */
-.supplier .col-lg-5 h2 {
-	font-size: 24px;
-	width: 180px;
-	line-height: 34px;
-}
-.supplier .col-lg-7 p {
-	font-weight: 400;
-	font-size: 10px;
-	width: 353px;
-	padding-top: 32px;
-}
-.supplier {
-	padding-top: 50px;
-	padding-bottom: 30px;
-}
+    .banner h1 {
+
+        font-size: 24px;
+        width: 307px;
+        padding-top: 139px !important;
+        padding-bottom: 0px;
+
+        height: 0px;
 
 
-/* supplier part */
+    }
 
-/* image part */
+    .banner a {
+        font-weight: 400;
+        font-size: 10px;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-top: 64px;
+    }
+
+    /* banner part */
+
+    /* supplier part */
+    .supplier .col-lg-5 h2 {
+        font-size: 24px;
+        width: 180px;
+        line-height: 34px;
+    }
+
+    .supplier .col-lg-7 p {
+        font-weight: 400;
+        font-size: 10px;
+        width: 353px;
+        padding-top: 32px;
+    }
+
+    .supplier {
+        padding-top: 50px;
+        padding-bottom: 30px;
+    }
+
+
+    /* supplier part */
+
+    /* image part */
 
 
     .row {
         gap: 30px;
     }
 
-/* image part */   
+    /* image part */
 }
 
 @media (min-width: 768px) and (max-width: 991.99px) {
-      
+
     /* banner part */
 
 
-    .banner{
-  
-    height: 400px;
-    
-    }
-   .banner h1{
-    
-     font-size: 28px;
-    width: 350px;
-    padding-top: 165px !important;
-     padding-bottom: 0px;
-     
-     height: 0px;
-   
-   
-   }
-.banner a {
-	font-weight: 400;
-	font-size: 10px;
-	padding-top: 8px;
-	padding-bottom: 8px;
-	padding-left: 15px;
-	padding-right: 15px;
-	margin-top: 85px;
-}
-/* banner part */
+    .banner {
 
-/* supplier part */
-.supplier .col-lg-5 h2 {
-	font-size: 28px;
-	width: 210px;
-	line-height: 38px;
-}
-.supplier .col-lg-7 p {
-	font-weight: 400;
-	font-size: 11px;
-	width: 450px;
-	padding-top: 32px;
-}
-.supplier {
-	padding-top: 50px;
-	padding-bottom: 30px;
-}
-/* supplier part */
+        height: 400px;
+
+    }
+
+    .banner h1 {
+
+        font-size: 28px;
+        width: 350px;
+        padding-top: 165px !important;
+        padding-bottom: 0px;
+
+        height: 0px;
+
+
+    }
+
+    .banner a {
+        font-weight: 400;
+        font-size: 10px;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-top: 85px;
+    }
+
+    /* banner part */
+
+    /* supplier part */
+    .supplier .col-lg-5 h2 {
+        font-size: 28px;
+        width: 210px;
+        line-height: 38px;
+    }
+
+    .supplier .col-lg-7 p {
+        font-weight: 400;
+        font-size: 11px;
+        width: 450px;
+        padding-top: 32px;
+    }
+
+    .supplier {
+        padding-top: 50px;
+        padding-bottom: 30px;
+    }
+
+    /* supplier part */
 
     .row {
         row-gap: 30px;
     }
 }
 
-@media (min-width: 992px) and (max-width: 1199.99px) {}
+@media (min-width: 992px) and (max-width: 1199.99px) {
+      /* banner part */
 
-@media (min-width: 1200px) and (max-width: 1399.99px) {}
+     .banner {
+
+        height: 400px;
+
+    }
+
+    .banner h1 {
+
+        font-size: 30px;
+        width: 380px;
+        padding-top: 165px !important;
+        padding-bottom: 0px;
+
+        height: 0px;
+
+
+    }
+
+    .banner a {
+        font-weight: 400;
+        font-size: 12px;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-top: 85px;
+    }
+      /* banner part */
+        /* supplier part */
+    .supplier .col-lg-5 h2 {
+        font-size: 32px;
+        width: 230px;
+        line-height: 44px;
+    }
+
+    .supplier .col-lg-7 p {
+        font-weight: 400;
+        font-size: 11px;
+        width: 450px;
+        padding-top: 32px;
+    }
+
+    .supplier {
+        padding-top: 50px;
+        padding-bottom: 30px;
+    }
+
+    /* supplier part */
+
+}
+
+@media (min-width: 1200px) and (max-width: 1399.99px) {
+          /* banner part */
+
+     .banner {
+
+        height: 450px;
+
+    }
+
+    .banner h1 {
+	font-size: 34px;
+	width: 429px;
+	padding-top: 173px !important;
+	padding-bottom: 0px;
+	height: 0px;
+}
+
+    .banner a {
+        font-weight: 400;
+        font-size: 12px;
+        padding-top: 9px;
+    padding-bottom: 9px;
+    padding-left: 16px;
+    padding-right: 16px;
+        margin-top: 85px;
+    }
+      /* banner part */
+        /* supplier part */
+    .supplier .col-lg-5 h2 {
+	font-size: 34px;
+	width: 216px;
+	line-height: 44px;
+}
+
+    .supplier .col-lg-7 p {
+	font-weight: 400;
+	font-size: 12px;
+	width: 470px;
+	padding-top: 41px;
+}
+    .supplier {
+        padding-top: 50px;
+        padding-bottom: 30px;
+    }
+
+    /* supplier part */
+}
